--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<header>
-    Welcome to the game website
-</header>
+<head>
+    2DGG
+</head>
 <body>
-    Hello World
+    Welcome to the game website
 </body>
