--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<html lang="en">
 <head>
-    <title>2DGG</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document - 2DGG</title>
 </head>
 <body>
     Welcome to the game website
 </body>
+</html>
