added header and paragraph into landing page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document - 2DGG</title>
 </head>
 <body>
-    Welcome to the game website
+    <h1>Welcome to the game website</h1>
+
+    <p>This serves as our first post!</p>
 </body>
 </html>
