--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document - 2DGG</title>
+    <link rel="stylesheet" href="main.css">
+    <title>2DGG - WORKING TITLE</title>
 </head>
 <body>
     <h1>Welcome to the game website</h1>
     <p>This serves as our first post!</p>
+    <h2>This is a post with a different header</h2>
+    <h3>This is a post with a different header</h3>
+    <h4>This is a post with a different header</h4>
+    <h5>This is a post with a different header</h5>
+    <h6>This is a post with a different header</h6>
 </body>
 </html>
