updated html file. Test redeployment without css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <h1>Welcome to the game website</h1>
     <p>This serves as our first post!</p>
     <h2>This is a post with a different header</h2>
+    <p>Sample text</p>
     <h3>This is a post with a different header</h3>
+    <p>Sample text</p>
     <h4>This is a post with a different header</h4>
+    <p>Sample text</p>
     <h5>This is a post with a different header</h5>
+    <p>Sample text</p>
     <h6>This is a post with a different header</h6>
+    <p>Sample text</p>
 </body>
 </html>
