--- a/blog.html
+++ b/blog.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <link rel="stylesheet" href="main.css">
+    <title>2DGG - Blog</title>
 </head>
 <body>
-    
+    <h1>This is the Blog page!</h1>
+    <p>This is our first blog post!</p>
+    <a href="/contact.html"></a>
+    <a href="/index.html"></a>
 </body>
 </html>
