--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <link rel="stylesheet" href="main.css">
+    <title>2DGG - Contact</title>
 </head>
 <body>
-    
+    <h1>This is the Contact page!</h1>
+    <p>Insert contact info here!</p>
+    <a href="/blog.html"></a>
+    <a href="/index.html"></a>
 </body>
 </html>
