--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>2DGG - WORKING TITLE</title>
+    <title>2DGG - Main Page</title>
 </head>
 <body>
-    <h1>Welcome to the game website</h1>
-    <p>This serves as our first post!</p>
-    <h2>This is a post with a different header</h2>
+    <h1>Welcome to the game website. h1</h1>
+    <p>This serves as our first p tag!</p>
+    <h2>This is a post with a different header h2</h2>
     <p>Sample text</p>
-    <h3>This is a post with a different header</h3>
+    <p>Contact</p>
+    <a href="/contact.html"></a>
+    <h3>This is a post with a different header h3</h3>
     <p>Sample text</p>
-    <h4>This is a post with a different header</h4>
+    <p>Blog</p>
+    <a href="/blog.html"></a>
+    <h4>This is a post with a different header h4</h4>
     <p>Sample text</p>
-    <h5>This is a post with a different header</h5>
+    <h5>This is a post with a different header h5</h5>
     <p>Sample text</p>
-    <h6>This is a post with a different header</h6>
+    <h6>This is a post with a different header h6</h6>
     <p>Sample text</p>
 </body>
 </html>
