fixed a tags and color css

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is the Contact page!</h1>
     <p>Insert contact info here!</p>
-    <a href="/blog.html"></a>
-    <a href="/index.html"></a>
+    <a href="/blog.html">Blog Page</a>
+    <a href="/index.html">Index page</a>
 </body>
 </html>
