--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is the Blog page!</h1>
     <p>This is our first blog post!</p>
-    <a href="/contact.html"></a>
-    <a href="/index.html"></a>
+    <a href="/contact.html">Contact Page</a>
+    <a href="/index.html">Index Page</a>
 </body>
 </html>
