--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <h2>This is a post with a different header h2</h2>
     <p>Sample text</p>
     <p>Contact</p>
-    <a href="/contact.html"></a>
+    <a href="/contact.html">Contact Page</a>
     <h3>This is a post with a different header h3</h3>
     <p>Sample text</p>
     <p>Blog</p>
-    <a href="/blog.html"></a>
+    <a href="/blog.html">Blog Page</a>
     <h4>This is a post with a different header h4</h4>
     <p>Sample text</p>
     <h5>This is a post with a different header h5</h5>
