--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <p>This serves as our first p tag!</p>
     <h2>This is a post with a different header h2</h2>
     <p>Sample text</p>
-    <p>Contact</p>
-    <a href="/contact.html">Contact Page</a>
     <h3>This is a post with a different header h3</h3>
     <p>Sample text</p>
-    <p>Blog</p>
-    <a href="/blog.html">Blog Page</a>
     <h4>This is a post with a different header h4</h4>
     <p>Sample text</p>
     <h5>This is a post with a different header h5</h5>
     <p>Sample text</p>
     <h6>This is a post with a different header h6</h6>
     <p>Sample text</p>
+    <a href="/Isaiah-Martinez.github.io/contact.html">Contact Page</a>
+    <a href="/Isaiah-Martinez.github.io/blog.html">Blog Page</a>
 </body>
 </html>
