anchor tags fix

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is the Blog page!</h1>
     <p>This is our first blog post!</p>
-    <a href="/Isaiah-Martinez.github.io/contact.html">Contact Page</a>
-    <a href="/Isaiah-Martinez.github.io/index.html ">Index Page</a>
+    <a href="contact.html">Contact Page</a>
+    <a href="index.html ">Index Page</a>
 </body>
 </html>
