--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is the Contact page!</h1>
     <p>Insert contact info here!</p>
-    <a href="/Isaiah-Martinez.github.io/index.html ">Index Page</a>
-    <a href="/Isaiah-Martinez.github.io/blog.html">Blog Page</a>
+    <a href="index.html ">Index Page</a>
+    <a href="blog.html">Blog Page</a>
 </body>
 </html>
