--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Sample text</p>
     <h6>This is a post with a different header h6</h6>
     <p>Sample text</p>
-    <a href="/Isaiah-Martinez.github.io/contact.html">Contact Page</a>
-    <a href="/Isaiah-Martinez.github.io/blog.html">Blog Page</a>
+    <a href="contact.html">Contact Page</a>
+    <a href="blog.html">Blog Page</a>
 </body>
 </html>
