added header div with styles

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,13 @@
     <title>2DGG - Blog</title>
 </head>
 <body>
+    <div class="header">
+        <a href="index.html ">Index Page</a>
+        <a href="contact.html">Contact Page</a>
+        <a href="blog.html">Blog Page</a>
+    </div>
+
+
     <h1>This is the Blog page!</h1>
     <p>This is our first blog post!</p>
     <a href="contact.html">Contact Page</a>
