footer, header and placeholder info

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>2DGG - Contact</title>
+    <title>2DGG - About Us</title>
+    <!--Add name of game instead of 2DGG-->
 </head>
 <body>
+    <div class="header">
+        <a href="index.html ">Home Page</a>
+        <a href="contact.html">About Us</a>
+        <a href="blog.html">Blog</a>
+    </div>
+
+    <br>
+
     <h1>This is the Contact page!</h1>
-    <p>Insert contact info here!</p>
-    <a href="index.html ">Index Page</a>
-    <a href="blog.html">Blog Page</a>
+    
+    <p>Wrap the intros in a single div for styling</p>
+
+    <br>
+
+    <p>Eg. Isaiah Martinez</p>
+    <p>Link to personal website</p>
+    <p>short introduction about self</p>
+    <p>Role in project</p>
+    <p>Links to social Media like - link github, linkedin, twitter</p>
+
+    <br>
+
+    <div class="footer">
+        <p>CSUN Logo (img) which links to CSUN website</p>
+        <p>Links to csun social medias (FB, twitter, Linkedin, insta)</p>
+        <a href="https://www.csun.edu/~xjiang/SeniorDesign/">Course Page</a>
+        <p>Copyright © California State University, Northridge</p>
+    </div>
 </body>
 </html>
