--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <title>2DGG - Main Page</title>
+    <!--Add name of game instead of 2DGG-->
 </head>
 <body>
+
+    <div class="header">
+        <a href="index.html ">Home Page</a>
+        <a href="contact.html">About Us</a>
+        <a href="blog.html">Blog</a>
+    </div>
+
+    <p>Project Name</p>
+
+    <p>Link to published game on itch.io or steam</p>
+
+    <p>About the project: Purpose, major features</p>
+
+    <p>major technologies used with links to each</p>
+
+    <p>skills used</p>
+
+    <p>Demo video - 3.5 mins. upload to youtube and embed vid link</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
     <h1>Welcome to the game website. h1</h1>
     <p>This serves as our first p tag!</p>
     <h2>This is a post with a different header h2</h2>
@@ -19,7 +46,15 @@
     <p>Sample text</p>
     <h6>This is a post with a different header h6</h6>
     <p>Sample text</p>
-    <a href="contact.html">Contact Page</a>
-    <a href="blog.html">Blog Page</a>
+
+    <br>
+
+    <div class="footer">
+        <p>CSUN Logo (img) which links to CSUN website</p>
+        <p>Links to csun social medias (FB, twitter, Linkedin, insta)</p>
+        <a href="https://www.csun.edu/~xjiang/SeniorDesign/">Course Page</a>
+        <p>Copyright © California State University, Northridge</p>
+    </div>
+
 </body>
 </html>
