contact -> about us

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <br>
 
-    <h1>This is the Contact page!</h1>
+    <h1>This is the About Us page!</h1>
     
     <p>Wrap the intros in a single div for styling</p>
 
