Added Media for footer which is now on all pages

--- a/index.html
+++ b/index.html
@@ -10,22 +10,40 @@
 <body>
 
     <div class="header">
-        <a href="index.html ">Home Page</a>
+        <a href="index.html">Home Page</a>
         <a href="contact.html">About Us</a>
         <a href="blog.html">Blog</a>
     </div>
 
-    <p>Project Name</p>
+    <br>
+
+    <h1>PROJECT NAME</h1>
 
     <p>Link to published game on itch.io or steam</p>
-
-    <p>About the project: Purpose, major features</p>
-
-    <p>major technologies used with links to each</p>
-
-    <p>skills used</p>
-
+    
     <p>Demo video - 3.5 mins. upload to youtube and embed vid link</p>
+
+    <p>About the project: Purpose, major features, Setting</p>
+
+    <h1>Purpose:</h1>
+    <p>Our purpose to create this game is to...</p>
+
+    <h1>Major Features:</h1>
+    <p>-MF1</p>
+    <p>-MF2</p>
+    <p>-MF3</p>
+
+    <h1>Setting:</h1>
+    <p>The story is set in...</p>
+
+    <h1>Technologies Used:</h1>
+    <p>First</p>
+    <p>link to page</p>
+
+    <h1>Skills used:</h1>
+    <p>skill1</p>
+    <p>skill2</p>
+
     <br>
     <br>
     <br>
@@ -50,9 +68,25 @@
     <br>
 
     <div class="footer">
-        <p>CSUN Logo (img) which links to CSUN website</p>
-        <p>Links to csun social medias (FB, twitter, Linkedin, insta)</p>
-        <a href="https://www.csun.edu/~xjiang/SeniorDesign/">Course Page</a>
+        <p>CSUN Links:</p>
+
+        <a href="https://w2.csun.edu">
+            <img src="/Media/CSUNS.svg.png" width="50" height="50">
+        </a>
+        <a href="https://www.facebook.com/calstatenorthridge/">
+            <img src="/Media/Facebook-logo.png" width="80" height="50">
+        </a>
+        <a href="https://twitter.com/csunorthridge?s=20&t=L-dZ-5KCdYfqsExe6KgLKA">
+            <img src="/Media/Twitter-logo.svg.png" width="50" height="40">
+        </a>
+        <a href="https://www.linkedin.com/school/california-state-university-northridge/">
+            <img src="/Media/Linkedin-logo.png" width="50" height="50">
+        </a>
+        <a href="https://www.instagram.com/csun_edu/?hl=en">
+            <img src="Media/Instagram-logo.png" width="90" height="50">
+        </a>
+        <br>
+        <a href="https://www.csun.edu/~xjiang/SeniorDesign/">Comp 490 Course Page</a>
         <p>Copyright © California State University, Northridge</p>
     </div>
 
