updated all pages for penultimate revisions

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="header">
         <a href="index.html">Home Page</a>
         <a href="contact.html">About Us</a>
-        <a href="blog.html">Blog</a>
+        <a href="scrnshot.html">Screenshots</a>
     </div>
 
     <br>
@@ -69,7 +69,6 @@
         </div>
     </div>
     
-    <br>
     <br> 
     
     <div class="footer">
