--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <a href="index.html">Home Page</a>
         <a href="contact.html">About Us</a>
-        <a href="blog.html">Blog</a>
+        <a href="scrnshot.html">Screenshots</a>
     </div>
 
     <br>
@@ -23,47 +23,75 @@
     
     <p>Demo video - 3.5 mins. upload to youtube and embed vid link</p>
 
-    <p>About the project: Purpose, major features, Setting</p>
-
     <h1>Purpose:</h1>
-    <p>Our purpose to create this game is to...</p>
+    <p class="indent">Games are an integral part of the life of our team. We want to learn how to make games. To do this, we decided to make a 2D game to get acquainted with the basic knowledge of Game development. </p>
+    <h4>Problems to solve:</h4>
+    <ul>
+        <li >There are many games that are already successfully entertaining people. We are not going to create something different from other games, but take ideas from them and make them work  properly together.</li>
+        <li>People have a need for fun and we are going to satisfy this need with a game.</li>
+        <li>Not a lot of work done for 2D games in UE.</li>
+    </ul>
 
     <h1>Major Features:</h1>
-    <p>-MF1</p>
-    <p>-MF2</p>
-    <p>-MF3</p>
+    <ul>
+        <li>2D Game made in Unreal Engine</li>
+        <li>Single-player Action Linear Platformer</li>
+        <li>Dynamic Story</li>
+        <li>Free</li>
+    </ul>
 
     <h1>Setting:</h1>
     <p>The story is set in...</p>
 
     <h1>Technologies Used:</h1>
-    <p>First</p>
-    <p>link to page</p>
+    <ul>
+        <li>
+            <p>
+                Unreal Engine
+            </p>
+            <a href="https://www.unrealengine.com/en-US">Link</a>
+        </li>
+        
+        <li>
+            <p>
+                Adobe Photoshop
+            </p>
+            <a href="https://www.adobe.com/products/photoshop.html">Link</a>
+        </li>
+
+        <li>
+            <p>
+                Dexed
+            </p>
+            <a href="https://asb2m10.github.io/dexed/">Link</a>
+        </li>
+
+        <li>
+            <p>
+                Github
+            </p>
+            <a href="https://github.com">Link</a>
+        </li>
+
+        <li>
+            <p>
+                Garageband
+            </p>
+            <a href="https://en.wikipedia.org/wiki/GarageBand">Wikipedia Page</a>
+        </li>
+    </ul>
 
     <h1>Skills used:</h1>
-    <p>skill1</p>
-    <p>skill2</p>
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <h1>Welcome to the game website. h1</h1>
-    <p>This serves as our first p tag!</p>
-    <h2>This is a post with a different header h2</h2>
-    <p>Sample text</p>
-    <h3>This is a post with a different header h3</h3>
-    <p>Sample text</p>
-    <h4>This is a post with a different header h4</h4>
-    <p>Sample text</p>
-    <h5>This is a post with a different header h5</h5>
-    <p>Sample text</p>
-    <h6>This is a post with a different header h6</h6>
-    <p>Sample text</p>
+    <ul>
+        <li>Creativity</li>
+        <li>Teamwork</li>
+        <li>Collaboration</li>
+        <li>Ingenuity</li>
+        <li>Resourcefulness</li>
+        <li>Communication</li>
+        <li>Coding In Blueprints</li>
+        <li>Music/Artistic Creativity</li>
+    </ul>
 
     <br>
 
