--- a/scrnshot.html
+++ b/scrnshot.html
@@ -12,30 +12,27 @@
     <div class="header">
         <a href="index.html">Home Page</a>
         <a href="contact.html">About Us</a>
-        <a href="blog.html">Blog</a>
+        <a href="scrnshot.html">Screenshots</a>
     </div>
 
     <br>
 
-    <h1>This is the Blog page!</h1>
+    <h1>Screenshots</h1>
+
+    <h3>View our progress of the Project in the screenshots and videos below!</h3>
     
     <br>
 
-    <p>add a div here so that links to the later posts will be visible and clickable</p>
-    <p>the div will have the option to be minimized and maximized</p>
-    
+    <p>Insert Image here</p>
+
+    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=OdzheVQ9l8U"></iframe>
+
+    <br>
     <br>
 
-    <p>Add a div for each individual post that contains special text styling and such</p>
-    <p>i.e. div -> | div -> post <- div | div -> post <- div | div -> post <- div |<- div</p>
+    <a href="https://www.youtube.com/watch?v=OdzheVQ9l8U">Link to first presentation video</a>
+
     <br>
-
-    <p>This is our first blog post! - Author/Written by: Insert Name - Date: February 6, 2023</p>
-
-    <p>Need some personal experiences. These include our own additions and updates. At minimum align with sprints</p>
-
-    <p>We should also include some photos alongside posts so audience can see updates</p>
-
     <br>
 
     <div class="footer">
