Fixed lists css and youtube link embed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     
     <p>Demo video - 3.5 mins. upload to youtube and embed vid link</p>
 
+    <h1>Setting:</h1>
+    <p class="indent">The story is set in...</p>
+
+    <br>
+    <br>
+
     <h1>Purpose:</h1>
     <p class="indent">Games are an integral part of the life of our team. We want to learn how to make games. To do this, we decided to make a 2D game to get acquainted with the basic knowledge of Game development. </p>
     <h4>Problems to solve:</h4>
@@ -39,9 +45,6 @@
         <li>Dynamic Story</li>
         <li>Free</li>
     </ul>
-
-    <h1>Setting:</h1>
-    <p>The story is set in...</p>
 
     <h1>Technologies Used:</h1>
     <ul>
