--- a/scrnshot.html
+++ b/scrnshot.html
@@ -25,13 +25,10 @@
 
     <p>Insert Image here</p>
 
-    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=OdzheVQ9l8U"></iframe>
+    <iframe width="420" height="345" src="https://www.youtube.com/embed/OdzheVQ9l8U">
+    </iframe>
 
     <br>
-    <br>
-
-    <a href="https://www.youtube.com/watch?v=OdzheVQ9l8U">Link to first presentation video</a>
-
     <br>
     <br>
 
